# csCapstone

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  Makefile.in  README.md  abstract.txt  config.status  configure  configure.ac
Ubuntu/: Makefile
Unix/: Makefile
VS2013/: gigapixel-viewer.sln
VS2013/gigapixel-viewer/: gigapixel-viewer.vcxproj
Weekly Reports/: Week 1.docx
Windows/: WindowsSciviewerBetter.sln
Windows/Project1/: Project1.vcxproj
Windows/WindowsSciviewerBetter/: WindowsSciviewerBetter.vcxproj
WindowsSciviewerBetter/: WindowsSciviewerBetter.sln
autom4te.cache/: output.0  requests  traces.0  traces.1
meetingNotes/: agenda9-15-15.docx  genericAgendaForm.docx  notes.txt  notes1-28-16.txt  notes1-4-16.txt  notes11-17-16.txt  notesWithPalmer_10-6-15.txt  notesWithTrent.txt  presentationNotes11-19-15.txt
src/: Makefile  Makefile.am  Makefile.in  args.c  args.cpp  bump.cpp  fltkExample.c  fltkExample2.c  frag_shader.sc  gdalreader.c  gdalreader.cpp  glhelper.c  helloworld.c  helloworld.cpp  main.c  main.cpp  main.cpp.old  makefile  option_description.cpp  options_description.cpp  raster.c  sampler.c  toolbar.c  toolbar.c.old  toolbarAlternativeBecauseItIsAwful.c  toolbarWorksTest  value_semantic.cpp  varying.def.sc  vertex_shader.sc
src/.deps/: args.Po  gdalreader.Po  glhelper.Po  main.Po  raster.Po
src/SpeedTest/: Makefile  speedtest.c
src/bgfx/headers/: sampler.h
src/headers/: args.h  config.h  err.h  gdalreader.h  glhelper.h  os.h  raster.h  renderer.cpp  toolbar.h
src/learning/bgfx/: common.h
src/learning/polygons/: Makefile  opengl_polygons.c  polygons
src/learning/polygons/headers/: glhelper.h
src/learning/textures/: Makefile  gdalreader.c  glhelper.c  opengl_texturing.c  textures
src/learning/textures/headers/: gdalreader.h
src/sciviewer/: Makefile  lod2.c  main  main.c  makefile  prob.c  probabilistic7.c  tween.c  ui_images.c
src/sciviewer/headers/: SV.h  errcheck.h  lod2.h  probabilistic.h  tween.h  ui_images.h
src/sciviewer_better/: .glhelper.c.swp  Makefile  gdalreader.c  glhelper.c  main.c  mainold.c  raster.c  rastershader.c
src/sciviewer_better/headers/: .glhelper.h.swp  gdalreader.h  glhelper.h  os.h  raster.h  rastershader.h  threads.h
src/sciviewer_better/testing/: test.c
src/sciviewer_better/testing/general/: forgot_comment.c
src/sciviewer_better/testing/pixels/: Makefile  main.c
src/sciviewer_better/testing/rasterio_vs_datasetio/: gdalreader.c  main.c
src/sciviewer_better/testing/rasterio_vs_readblock/: gdalreader.c  master.c
src/sciviewer_better/testing/rasterio_vs_readblock/headers/: gdalreader.h
src/testing/rasterio_vs_datasetio/headers/: gdalreader.h  os.h
src/testing/rasterio_vs_readblock/: main.c
website/: About.html  Archive.html  index.html
(+22 files in other folders)
